plugins/fir-plugin-prototype/testData/diagnostics/checkers/simple.kt
fun <!FUNCTION_WITH_DUMMY_NAME!>dummy<!>(x: Int) {

}

class A {
    fun <!FUNCTION_WITH_DUMMY_NAME!>dummy<!>() {

    }
}

class B {
    konst dummy: Int = 1
}
